Switch to mimir gateway and add ingress

--- a/jupyterhub/docker/install-tools.ansible.yaml
+++ b/jupyterhub/docker/install-tools.ansible.yaml
@@ -136,6 +136,7 @@
           - helm
           - kubectx
           - talosctl
+          - mimirtool
           # - minio/stable/mc
           - cilium-cli
         state: present
