--- a/.github/workflows/static-validate.yml
+++ b/.github/workflows/static-validate.yml
@@ -95,7 +95,7 @@ jobs:
           for chart in ${{ steps.modules.outputs.CHARTS }}; do
             echo "Checking chart: $chart"
             pushd "$chart"
-            helm dep build
+            helm dep build --skip-refresh
             helm lint .
             ${{ github.workspace }}/ci-tools/helm.sh template --dry-run=client . \
               | ${{ github.workspace }}/ci-tools/kubeconform.sh
