--- a/.github/workflows/static-validate.yml
+++ b/.github/workflows/static-validate.yml
@@ -26,15 +26,10 @@ jobs:
           key: ${{ runner.os }}-tools-${{ hashFiles('ci-tools/install-tools.sh') }}
           restore-keys: |
             ${{ runner.os }}-tools-
-      - name: Precommit
-        run: |
-          set -euo pipefail
-          # Install pre-commit if not already installed.
-          if ! command -v pre-commit &>/dev/null; then
-            python3 -m pip install --user pre-commit
-          fi
-          # Run pre-commit hooks.
-          pre-commit run --all-files --show-diff-on-failure
+      - uses: actions/setup-python@v5.6.0
+        with:
+          python-version: ">=3.11"
+      - uses: pre-commit/action@v3.0.1
       - name: Install tools
         run: |
           set -euo pipefail
