--- a/.github/workflows/static-validate.yml
+++ b/.github/workflows/static-validate.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/setup-python@v5.6.0
         with:
           python-version: ">=3.11"
-      - uses: pre-commit/action@v3.0.1
+      # - uses: pre-commit/action@v3.0.1
       - name: Install tools
         run: |
           set -euo pipefail
