Add helm and github-actions

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,4 +4,13 @@ updates:
     directories:
       - "*"
     schedule:
-      interval: "weekly"
+      interval: "daily"
+  - package-ecosystem: "helm"
+    directories:
+      - "*"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"
