Suppress broken helm version, drop to weekly updates - some of these projects release multiple patch versions in a day.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,7 +17,7 @@ updates:
       - /loki
       - /mimir
     schedule:
-      interval: "daily"
+      interval: "weekly"
   - package-ecosystem: "helm"
     directories:
       - /alloy
@@ -34,9 +34,12 @@ updates:
       - /jupyterhub
       - /loki
       - /mimir
+    ignore:
+      - dependency-name: "argocd"
+        versions: ["2.0.0"]
     schedule:
-      interval: "daily"
+      interval: "weekly"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
