--- a/.github/workflows/static-validate.yml
+++ b/.github/workflows/static-validate.yml
@@ -133,7 +133,8 @@ jobs:
             exit 1
           fi
           echo "Setting up Wireguard..."
-          time sudo apt-get -qq -y -o Dpkg::Progress-Fancy="0" -o APT::Color="0" -o Dpkg::Use-Pty="0" \
+          time sudo apt-get -y --no-install-recommends \
+           -qq -o Dpkg::Progress-Fancy="0" -o APT::Color="0" -o Dpkg::Use-Pty="0" \
             install wireguard-tools
           echo "${{ secrets.WIREGUARD_CONF }}" > "$HOME/wg0.conf"
           chmod 0600 "$HOME/wg0.conf"
@@ -141,6 +142,18 @@ jobs:
           time sudo wg-quick up "$HOME/wg0.conf"
           echo "Connected"
           echo "WIREGUARD=1" | tee -a "$GITHUB_OUTPUT"
+
+      - name: Get kubeconfig
+        run: |
+          set -euo pipefail
+          if [ -z "${{ secrets.KUBECONFIG }}" ]; then
+            echo "No KUBECONFIG provided"
+            exit 1
+          fi
+          mkdir -p "$HOME/.kube"
+          chmod 0700 "$HOME/.kube"
+          echo "${{ secrets.KUBECONFIG }}" > "$HOME/.kube/config"
+          chmod 0600 "$HOME/.kube/config"
 
       - name: Diff Helm against cluster
         run: |
