--- a/mimir/values.yaml
+++ b/mimir/values.yaml
@@ -45,14 +45,18 @@ mimir-distributed:
     strategy:
       type: Recreate
       rollingUpdate: null
-  # compactor:
-  #   strategy:
-  #     type: Recreate
-  #     rollingUpdate: null
-  # distributor:
-  #   strategy:
-  #     type: Recreate
-  #     rollingUpdate: null
+    extraContainers:
+    - name: alert-forward
+      image: ghcr.io/symmatree/internal/mimir-webhook:2025-07-12
+      ports:
+        - name: webhook
+          containerPort: 3000
+          protocol: TCP
+      env:
+        - name: APPRISE_URL
+          value: http://apprise.apprise.svc:8000/notify
+        - name: APPRISE_KEY
+          value: apprise
   ingester:
     replicas: 2
     zoneAwareReplication:
