--- a/jupyterhub/docker/install-tools.ansible.yaml
+++ b/jupyterhub/docker/install-tools.ansible.yaml
@@ -134,6 +134,7 @@
         name:
           - argocd
           - helm
+          - jsonnet-bundler
           - kubectx
           - talosctl
           - tanka
