--- a/mimir/values.yaml
+++ b/mimir/values.yaml
@@ -42,24 +42,25 @@ mimir-distributed:
 
   image:
     pullSecrets:
-    - ghcr-pull-secret
+      - ghcr-pull-secret
   # Make everyone Recreate to reduce pod overlaps that spoil the rings.
   alertmanager:
     strategy:
       type: Recreate
       rollingUpdate: null
     extraContainers:
-    - name: alert-forward
-      image: ghcr.io/symmatree/internal/mimir-webhook:2025-07-13
-      ports:
-        - name: webhook
-          containerPort: 3000
-          protocol: TCP
-      env:
-        - name: APPRISE_URL
-          value: http://apprise.apprise.svc:8000/notify
-        - name: APPRISE_KEY
-          value: apprise
+      - name: alert-forward
+        image: ghcr.io/symmatree/internal/mimir-webhook:2025-07-13
+        ports:
+          - name: webhook
+            containerPort: 3000
+            protocol: TCP
+        env:
+          - name: APPRISE_URL
+            # Trailing slash is required
+            value: http://apprise.apprise.svc:8000/notify/
+          - name: APPRISE_KEY
+            value: apprise
   ingester:
     replicas: 2
     zoneAwareReplication:
