Certs for cam and photos vhosts

--- a/external-dns/templates/static-hosts.yaml
+++ b/external-dns/templates/static-hosts.yaml
@@ -12,6 +12,26 @@ spec:
 kind: Service
 apiVersion: v1
 metadata:
+  name: cam
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: cam.local.symmatree.com
+spec:
+  type: ExternalName
+  externalName: raconteur.ad.local.symmatree.com
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: photos
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: photos.local.symmatree.com
+spec:
+  type: ExternalName
+  externalName: raconteur.ad.local.symmatree.com
+---
+kind: Service
+apiVersion: v1
+metadata:
   name: morpheus
   annotations:
     external-dns.alpha.kubernetes.io/hostname: morpheus.local.symmatree.com
