--- a/static-certs/values.yaml
+++ b/static-certs/values.yaml
@@ -8,3 +8,6 @@ staticCerts:
   - name: homeassistant
   # - name: laserjet -- requires special care.
   - name: hubitat
+  # cam is hosted on raconteur.
+  - name: cam
+  - name: photos
