--- a/talos/talos-patch-all.yaml
+++ b/talos/talos-patch-all.yaml
@@ -16,6 +16,17 @@ cluster:
     extraArgs:
       # With /23 allocated total, /25-per-node allows max of 4 nodes
       node-cidr-mask-size: 25
+      # Listen to more than localhost so we can scrape from Alloy.
+      bind-address: 0.0.0.0
+  scheduler:
+    extraArgs:
+      # Listen to more than localhost so we can scrape from Alloy.
+      bind-address: 0.0.0.0
+  apiServer:
+    extraArgs:
+      # Listen to more than localhost so we can scrape from Alloy.
+      bind-address: 0.0.0.0
+
   proxy:
     # Cilium will replace the proxy
     disabled: true
