--- a/mimir/Chart.yaml
+++ b/mimir/Chart.yaml
@@ -7,4 +7,4 @@ appVersion: 0.1.0
 dependencies:
   - name: mimir-distributed
     repository: https://grafana.github.io/helm-charts
-    version: ~5.7
+    version: 5.8.0-weekly.350
